added curl, before build

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 ################################################################################
 
 /.vs
+/sourcecode/.vs/ProcessHollowing/FileContentIndex
+/sourcecode/.vs
